--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -8,19 +8,39 @@ ul.list > li{
     list-style-type: none;
     border-bottom: grey solid 1px;
 }
-a:visited{
+li > a:visited{
     color:red;
 }
-a:link{
+li > a:link{
     color:green;
 }
-a:hover{
+li > a:hover{
     color:pink;
 }
-li:first-child::first-letter{
+ul li:first-child::first-letter{
     font-size: 120%;
-    font-style: bold;
+    font-weight: bold;
 }
 a[title = "BCIT homepage"]{
     background-color: yellow;
 }
+
+img{
+    float:left;
+}
+.below{
+    clear:left;
+}
+
+.target{
+    width:50px;
+    height:50px;
+    background-color: forestgreen;
+    position: absolute;
+    top:0;
+    right:0;
+    }
+.container{
+    border: 2px gray solid;
+    position: relative;
+    }
